fixed color and spacing in 'forgot password' page

--- a/client/src/components/Home/index.css
+++ b/client/src/components/Home/index.css
@@ -3,6 +3,7 @@ p.heading {
     font-weight: 300;
     text-align: center;
     font-size: 40px;
+    margin-top: 30px;
 }
 p.summary {
     text-align: center;
