--- a/client/src/components/Newsletter/index.css
+++ b/client/src/components/Newsletter/index.css
@@ -1,5 +1,5 @@
 h2.newsletterTitle {
-    color: #01579b;
+    color: #2E4158;
     font-weight: 300;
     margin-bottom: 80px;
     text-align: center;
